# ai_protocol

./: .coverage  .gitignore  ARCHITECTURE.md  GEMINI.md  LICENSE  PROGRESS.md  PROTOCOL.md  README.md  SCRIPTS-CATALOG.md  docs  main.py  pyproject.toml
docs/: CODING_STANDARDS.md  PROGRESS.md  context_registry.json
docs/requirements/: TEMPLATE.md  p2-test-suite.md
scripts/: bootstrap.py  check_protocol.py  context.py
templates/: AGENT_SUBMODULE.md  CLAUDE.md  GEMINI.md  PROTOCOL.md  PROTOCOL_BOOTLOADER.md  SCRIPTS-CATALOG.md
templates/docs/: CODING_STANDARDS.md  PROGRESS.md  TESTING.md  context_registry.json
templates/scripts/: context.py
tests/: conftest.py  test_bootstrap.py  test_check_protocol.py  test_context.py  test_template_consistency.py
